--- a/godlike.css
+++ b/godlike.css
@@ -16,3 +16,10 @@
 	background-repeat: no-repeat;
 	background-image: url("data:image/svg+xml;utf8,<?xml version='1.0' encoding='utf-8'?><svg viewBox='0 0 12 12' xmlns='http://www.w3.org/2000/svg' fill='rgb(16 185 129)'><path d='M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z'></path></svg>");
 }
+.command-install {
+	display: inline-block;
+	width: 374px;
+	text-align: center;
+	font-size: 1.2em;
+	margin-top: 30px;
+}
