--- a/godlike.css
+++ b/godlike.css
@@ -18,8 +18,16 @@
 }
 .command-install {
 	display: inline-block;
-	width: 374px;
+	width: 380px;
 	text-align: center;
 	font-size: 1.2em;
-	margin-top: 30px;
+	margin-top: 20px;
+	border: 0 !important;
+	background: transparent;
+
+}
+@media (max-width: 768px) {
+	.command-install {
+		width: 100%;
+	}
 }
